--- a/src/components/Navigation.css
+++ b/src/components/Navigation.css
@@ -10,6 +10,7 @@ body {
     display: flex;
     flex-direction: row;
     justify-content: center;
+    border-radius: 5px;
   }
   
   .topnav a {
